<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_sixteen"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/info_name"
            android:layout_marginStart="@dimen/margin_sixteen"
            android:layout_marginLeft="@dimen/margin_sixteen"
            android:layout_marginEnd="@dimen/margin_sixteen"
            android:layout_marginRight="@dimen/margin_sixteen"
            android:textColor="@color/colorSofterGrey"
            android:layout_marginTop="@dimen/margin_sixteen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_twelve"
            app:layout_constraintStart_toStartOf="@id/txtNameTitle"
            app:layout_constraintEnd_toEndOf="@id/txtNameTitle"
            app:layout_constraintTop_toBottomOf="@id/txtNameTitle"
            android:textColor="@color/colorWhite"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/info_name_value"/>

    <View
            android:id="@+id/viewLineFirst"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_one"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_ten"
            app:layout_constraintTop_toBottomOf="@id/txtName"
            app:layout_constraintStart_toStartOf="@id/txtName"
            app:layout_constraintEnd_toEndOf="@id/txtName"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAgeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_sixteen"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/info_age"
            android:layout_marginStart="@dimen/margin_sixteen"
            android:layout_marginLeft="@dimen/margin_sixteen"
            android:layout_marginEnd="@dimen/margin_sixteen"
            android:layout_marginRight="@dimen/margin_sixteen"
            android:textColor="@color/colorSofterGrey"
            android:layout_marginTop="@dimen/margin_sixteen"
            app:layout_constraintTop_toBottomOf="@id/viewLineFirst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_twelve"
            app:layout_constraintStart_toStartOf="@id/txtAgeTitle"
            app:layout_constraintEnd_toEndOf="@id/txtAgeTitle"
            app:layout_constraintTop_toBottomOf="@id/txtAgeTitle"
            android:textColor="@color/colorWhite"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/info_age_value"/>

    <View
            android:id="@+id/viewLineSecond"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_one"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_ten"
            app:layout_constraintTop_toBottomOf="@id/txtAge"
            app:layout_constraintStart_toStartOf="@id/txtAge"
            app:layout_constraintEnd_toEndOf="@id/txtAge"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEmailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_sixteen"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/info_email"
            android:layout_marginStart="@dimen/margin_sixteen"
            android:layout_marginLeft="@dimen/margin_sixteen"
            android:layout_marginEnd="@dimen/margin_sixteen"
            android:layout_marginRight="@dimen/margin_sixteen"
            android:textColor="@color/colorSofterGrey"
            android:layout_marginTop="@dimen/margin_sixteen"
            app:layout_constraintTop_toBottomOf="@id/viewLineSecond"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_twelve"
            app:layout_constraintStart_toStartOf="@id/txtEmailTitle"
            app:layout_constraintEnd_toEndOf="@id/txtEmailTitle"
            app:layout_constraintTop_toBottomOf="@id/txtEmailTitle"
            android:textColor="@color/colorWhite"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/info_email_value"/>

    <View
            android:id="@+id/viewLineThird"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_one"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_ten"
            app:layout_constraintTop_toBottomOf="@id/txtEmail"
            app:layout_constraintStart_toStartOf="@id/txtEmail"
            app:layout_constraintEnd_toEndOf="@id/txtEmail"/>

</androidx.constraintlayout.widget.ConstraintLayout>